# sheaf

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: Layout.tsx  OfflineIndicator.tsx  SaveOfflineButton.tsx  Sidebar.tsx  ThemeSwitcher.tsx
frontend/src/context/: AuthContext.tsx  OfflineContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useOffline.ts
frontend/src/lib/: api.ts  offlineDb.ts  offlineSync.ts
frontend/src/pages/: AdminStats.tsx  AdminUsers.tsx  CalibrePage.tsx  Dashboard.tsx  Documents.tsx  Login.tsx  ReaderPage.tsx  Register.tsx  SearchPage.tsx  SettingsPage.tsx  UploadPage.tsx
sheaf/: config.py  database.py  dependencies.py  main.py
sheaf/models/: __init__.py  document.py  reading_progress.py  user.py
sheaf/routers/: admin.py  auth.py  calibre.py  documents.py  ocr.py  public.py  reading_progress.py  search.py  settings.py
sheaf/schemas/: calibre.py  document.py  ocr.py  reading_progress.py  search.py  user.py
sheaf/services/: auth.py  cache.py  calibre.py  ocr.py  search.py
sheaf/services/storage/: __init__.py  azure_blob.py  base.py  local.py
tests/: conftest.py  test_auth.py  test_documents.py  test_settings.py
